--- a/config/sim.yaml
+++ b/config/sim.yaml
@@ -42,16 +42,16 @@ bridge:
     scan_beams: 1080
 
     # map parameters
-    map_path: '/sim_ws/src/f1tenth_gym_ros/maps/Spielberg_map'
-    map_img_ext: '.png'
+    map_path: '/sim_ws/src/f1tenth_gym_ros/maps/e7_floor5'
+    map_img_ext: '.pgm'
 
     # opponent parameters
     num_agent: 1
 
     # ego starting pose on map
-    sx: 0.0
+    sx: 1.5
     sy: 0.0
-    stheta: 0.0
+    stheta: 0.75
 
     # opp starting pose on map
     sx1: 2.0
